Refactor: clean code and add utility classes for tests

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>shared</module>
         <module>comic-domain</module>
         <module>anime-domain</module>
+        <module>user-domain</module>
     </modules>
 
     <groupId>br.com.devotaku</groupId>
