--- a/mal-api/pom.xml
+++ b/mal-api/pom.xml
@@ -9,14 +9,33 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>shared</artifactId>
-    <name>shared</name>
-    <description>Módulo Shared</description>
+    <artifactId>mal-api</artifactId>
+    <name>mal-api</name>
+    <description>MyAnimeList API adapter</description>
+
+    <properties>
+        <java.version>17</java.version>
+        <mal4j.version>2.7.2</mal4j.version>
+    </properties>
 
     <dependencies>
         <dependency>
+            <groupId>br.com.devotaku</groupId>
+            <artifactId>shared</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -28,6 +47,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.kttdevelopment</groupId>
+            <artifactId>mal4j</artifactId>
+            <version>${mal4j.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -35,15 +60,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
